# sundown

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_auth_hardening.py
app/: __init__.py  audit.py  cli.py  config.py  db.py  logging_config.py  main.py  security.py  security_throttle.py
app/api/: __init__.py  audit.py  auth.py  deps.py  ghosts.py  integrations.py  reports.py
app/integrations/: __init__.py  base.py  registry.py  sync.py
app/integrations/hris/: __init__.py  bamboohr.py  rippling.py
app/integrations/idp/: __init__.py  google_workspace.py  okta.py
app/integrations/saas/: __init__.py  github.py  slack.py
app/matching/: __init__.py  engine.py  rules.py
app/models/: __init__.py  _mixins.py  account.py  audit.py  ghost.py  identity.py  integration.py  match.py  report.py  revoked_token.py  user.py
app/notifications/: __init__.py  dispatch.py
app/reports/: __init__.py  data.py  renderers.py  service.py
app/scheduler/: __init__.py  jobs.py
app/schemas/: __init__.py  account.py  audit.py  auth.py  common.py  ghost.py  identity.py  integration.py  report.py
app/templates/: _ghost_row.html  audit.html  base.html  dashboard.html  ghost_detail.html  ghosts.html  integrations.html  login.html  reports.html  settings.html  setup_wizard.html
app/ui/: __init__.py  router.py
docs/: data-model.md
marketing/: index.html
scripts/: seed.py
tests/: conftest.py  test_app_smoke.py  test_audit.py  test_auth_hardening.py  test_e2e_happy_path.py  test_matching.py  test_security.py
tests/fixtures/bamboohr/: get__api.bamboohr.com_api_gateway.php_acme_v1_employees_directory.json  get__api.bamboohr.com_api_gateway.php_acme_v1_meta_users.json  post__api.bamboohr.com_api_gateway.php_acme_v1_reports_custom_q_format_e_JSON.json
tests/fixtures/github/: get__api.github.com_orgs_acme.json  get__api.github.com_orgs_acme_external-identities_q_per_page_e_100.json  get__api.github.com_orgs_acme_members_q_per_page_e_100_a_filter_e_all.json  get__api.github.com_users_alice.json  get__api.github.com_users_bob.json
tests/fixtures/okta/: get__acme.okta.com_api_v1_users_me.json  get__acme.okta.com_api_v1_users_q_limit_e_200.json
tests/integrations/: test_bamboohr.py  test_github.py  test_okta.py
